# ocaml-ssg

./: .gitignore  dune-project  ocaml_ssg.opam  publish.sh  style.css  template.html
.github/workflows/: deploy.yml
lib/: dune
posts/: example.md
test/: dune
