(lang dune 3.7)

(name ocaml_ssg)

(generate_opam_files true)

(source
 (github iamgabrieloliveira/ocaml-ssg))

(authors "Gabriel Oliveira")

(maintainers "Gabriel Oliveira")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_ssg)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune omd)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
